# EasyEDA-to-Fusion360-Eagle

./: .gitignore  AGENTS.md  LICENSE  PLANS.md  README.md  pyproject.toml
_tmp_crosscheck/pro_bundle/: summary.json  summary.txt
_tmp_crosscheck/pro_bundle/artifacts/: BundleProject.brd  BundleProject.eagle_project.txt  BundleProject.sch  generated_library.lbr.txt
_tmp_crosscheck/pro_bundle/manifests/: normalized_project.json  source_manifest.json
_tmp_crosscheck/pro_bundle/reports/: layer_mapping_report.txt  unresolved_parts.csv  unresolved_parts.json  validation_report.json  validation_report.txt
_tmp_crosscheck/pro_bundle/scripts/: rebuild_board.scr  rebuild_project.scr  rebuild_schematic.scr
_tmp_crosscheck/std_full/: summary.json  summary.txt
_tmp_crosscheck/std_full/artifacts/: StdFullProject.brd  StdFullProject.eagle_project.txt  StdFullProject.sch
src/easyeda2fusion/: converter.py
src/easyeda2fusion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_converter.py  test_emitters.py  test_library_builder.py  test_library_loader.py  test_parsers.py  test_schematic_inference.py  test_schematic_pipeline.py
tests/fixtures/: ambiguous_part.json  missing_library_generation.json  pro_board.json  pro_multilayer_board.json  pro_schematic.json  simple_fusion.lbr  simple_mpn_fusion.lbr  std_board.json  std_full_project.json  std_legacy_board_shape_strings.json  std_legacy_copperarea_path_payload.json  std_legacy_duplicate_refdes.json  std_schematic.json  unresolved_part.json
ulp/: easyeda2fusion_launcher.ulp
(+53 files in other folders)
