[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyeda2fusion"
version = "0.1.0"
description = "Python-first EasyEDA Standard/Pro to Fusion 360 Electronics (EAGLE) conversion tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "EasyEDA-to-Fusion360-Eagle" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
easyeda2fusion = "easyeda2fusion.ui.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
